--- a/src/pages/SearchPage/SearchFormCard/SearchFormInputs/SearchFormInputs.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormInputs/SearchFormInputs.module.scss
@@ -36,13 +36,14 @@
 
 .searchFormCard__inn__errorLabel {
 	@include error-login-text;
+	position: absolute;
 	margin-top: 2px;
 	margin-left: 64px;
 }
 
 .searchFormCard__tonality_label {
 	@include title-search-label;
-	padding: 11px 0 0 44px;
+	padding: 30px 0 0 44px;
 }
 
 .searchFormCard__tonality_input {
@@ -73,6 +74,7 @@
 
 .searchFormCard__documentCount__errorLabel {
 	@include error-login-text;
+	position: absolute;
 	margin-top: -110px;
 	margin-left: 90px;
 }
@@ -84,9 +86,9 @@
 	margin-left: 44px;
 }
 
-.searchFormCard__dateInputs {
-	display: flex;
-	flex-direction: row;
-	margin-left: 44px;
-	margin-top: 175px;
-}
+//.searchFormCard__dateInputs {
+//	display: flex;
+//	flex-direction: row;
+//	margin-left: 44px;
+//	margin-top: 175px;
+//}
