--- a/src/pages/ResultPage/PublicationCard/PublicationCard.module.scss
+++ b/src/pages/ResultPage/PublicationCard/PublicationCard.module.scss
@@ -13,11 +13,7 @@
 }
 
 .publicationCard__title {
-	color: #949494FF;
-	font-family: 'Inter', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 19px;
+	@include resultCardText;
 	position: absolute;
 	left: 30px;
 	top: 19px;
@@ -64,6 +60,38 @@
 	font-weight: 400;
 	line-height: 15px;
 	text-align: center;
+}
+
+
+
+.publicationCard__button {
+	width: 223px;
+	height: 47px;
+	background: #7CE3E1;
+	border-radius: 5px;
+	position: absolute;
+	bottom: 35px;
+	left: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.publicationCard__button_text {
+	color: black;
+	font-family: 'Inter', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 19px;
+	text-align: center;
+}
+
+
+.publicationCard__countWords {
+	@include resultCardText;
+	position: absolute;
+	bottom: 35px;
+	right: 28px;
 }
 
 
