--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -1,110 +1,110 @@
 /* SearchPage.module.scss */
 
-.container {
+.searchPage {
 	display: flex;
 	justify-content: space-between;
 	width: 1440px;
-	//height: 1122px;
+	height: auto;
 	align-items: flex-start;
 	flex-shrink: 0;
 	background: #FFF;
+}
 
-	&__leftColumn {
-		height: 100vh;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
+.searchPage__leftColumn {
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 
-		&_titleSearchTextBlock {
-			width: 743px;
-			color: #000;
-			font-family: 'FerryBlack', sans-serif;
-			font-size: 45px;
-			font-style: normal;
-			font-weight: 900;
-			line-height: normal;
-			letter-spacing: 0.45px;
-			margin-left: 60px;
-			margin-top: 40px;
-		}
-
-		&_leftTextUnderTitleBlock {
-			width: 534px;
-			display: block;
-			margin-top: 25px;
-			margin-left: 60px;
-			color: #000;
-			font-family: 'Inter', sans-serif;
-			font-size: 20px;
-			font-style: normal;
-			font-weight: 400;
-			line-height: normal;
-			letter-spacing: 0.2px;
-		}
+	&_titleSearchTextBlock {
+		width: 743px;
+		color: #000;
+		font-family: 'FerryBlack', sans-serif;
+		font-size: 45px;
+		font-style: normal;
+		font-weight: 900;
+		line-height: normal;
+		letter-spacing: 0.45px;
+		margin-left: 60px;
+		margin-top: 40px;
 	}
 
-	&__rightColumn {
-		height: 100vh;
-		width: 100%;
-		margin-top: 115px;
-		display: flex;
-		flex-direction: column;
+	&_leftTextUnderTitleBlock {
+		width: 534px;
+		display: block;
+		margin-top: 25px;
+		margin-left: 60px;
+		color: #000;
+		font-family: 'Inter', sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+		letter-spacing: 0.2px;
+	}
+}
 
-		&_document {
-			width: 91px;
-			height: 111px;
-			margin-left: 15px;
-			margin-top: -25px;
-		}
+.searchPage__rightColumn {
+	height: 100vh;
+	width: 100%;
+	margin-top: 115px;
+	display: flex;
+	flex-direction: column;
 
-		&_folders {
-			width: 140px;
-			height: 68px;
-			margin-left: 290px;
-			margin-top: -90px;
-		}
+	&_document {
+		width: 91px;
+		height: 111px;
+		margin-left: 15px;
+		margin-top: -25px;
+	}
+
+	&_folders {
+		width: 140px;
+		height: 68px;
+		margin-left: 290px;
+		margin-top: -90px;
 	}
 }
 
 
 @media (max-width: 767px) {
-	.container {
+	.searchPage {
 		display: block;
 		width: 375px;
 		height: 1632px;
+	}
 
-		&__leftColumn {
-			display: block;
+	.searchPage__leftColumn {
+		display: block;
 
-			&_titleSearchTextBlock {
-				font-size: 28px;
-				width: 361px;
-				letter-spacing: 0.28px;
-				margin-left: 14px;
-			}
-
-			&_leftTextUnderTitleBlock {
-				width: 100%;
-				font-size: 18px;
-				margin-left: 14px;
-			}
+		&_titleSearchTextBlock {
+			font-size: 28px;
+			width: 361px;
+			letter-spacing: 0.28px;
+			margin-left: 14px;
 		}
 
-		&__rightColumn {
-			flex-direction: column;
-			margin-top: -900px;
+		&_leftTextUnderTitleBlock {
+			width: 100%;
+			font-size: 18px;
+			margin-left: 14px;
+		}
+	}
 
-			&_document {
-				width: 59px;
-				height: 72px;
-				position: relative;
-				margin-left: 285px;
-				margin-top: 230px;
-			}
+	.searchPage__rightColumn {
+		flex-direction: column;
+		margin-top: -900px;
 
-			&_folders {
-				display: none;
-			}
+		&_document {
+			width: 59px;
+			height: 72px;
+			position: relative;
+			margin-left: 285px;
+			margin-top: 230px;
+		}
+
+		&_folders {
+			display: none;
 		}
 	}
 }
