--- a/src/pages/Main/BusinessTariffCard/BusinessTariffCard.module.scss
+++ b/src/pages/Main/BusinessTariffCard/BusinessTariffCard.module.scss
@@ -80,13 +80,21 @@
 }
 
 .businessTariffCard__priceTitle {
-  color: black;
+  color: $black;
   margin-top: -360px;
   margin-left: 30px;
 }
 
+.businessTariffCard__infoTextTitle {
+  @include labelStyles;
+  color: $white;
+  position: absolute;
+  top: 76px;
+  left: 30px;
+}
+
 .businessTariffCard__infoText {
-  color: black;
+  color: $black;
   font-size: 18px;
   font-family: "Inter", sans-serif;
   font-weight: 400;
@@ -97,7 +105,7 @@
 
 .businessTariffCard__price {
   margin-top: 13px;
-  color: black;
+  color: $black;
   font-size: 30px;
   font-family: "Inter", sans-serif;
   font-weight: 500;
@@ -108,7 +116,7 @@
 .businessTariffCard__priceHigh {
   margin-top: 168px;
   margin-left: 19px;
-  color: black;
+  color: $black;
   opacity: 0.5;
   font-size: 25px;
   font-family: "Inter", sans-serif;
@@ -150,7 +158,7 @@
   .businessTariffCard__moreBusinessButton {
     width: 287px;
     margin-left: 24px;
-    margin-top: 220px;
+    margin-top: 235px;
   }
 
   .businessTariffCard__moreText {
