--- a/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
@@ -35,7 +35,7 @@
   &__dateInputIcon {
     width: 20px;
     height: 20px;
-    margin-left: -35px;
+    margin-left: -15px;
   }
 
   &__dateInputs {
@@ -46,12 +46,12 @@
   }
 
   &__placeholder {
-    //text-align: center;
+    text-align: center;
     font-size: 14px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     color: $gray-light;
-    //transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     margin-left: 20px;
   }
 
