--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -21,6 +21,10 @@ a:hover  {
     text-decoration: none;
 }
 
+p {
+    margin: 0;
+}
+
 /* Common */
 
 aside, nav, footer, header, section, main {
